showing and delete my post

--- a/app/views/shared/_new_post.html.erb
+++ b/app/views/shared/_new_post.html.erb
@@ -1,5 +1,5 @@
 <div class="new-post mb-4">
   <div class="input-group input-group-lg">
-    <input type="text" id="new_post_input" class="form-control" placeholder="Write something...">
+    <input type="text" id="new_post_input" class="form-control">
   </div>
 </div>
