--- a/app/views/shared/_post_element.html.erb
+++ b/app/views/shared/_post_element.html.erb
@@ -1,168 +1,66 @@
-<div class="post-element bg-white py-3 px-4 mb-4">
-  <div class="user-info">
-    <div class="row">
-      <img src="https://znews-photo.zadn.vn/w660/Uploaded/cqdhmdxwp/2019_05_07/58950005_2293435560976842_1995073838693482496_o.jpg" class="rounded-circle mr-2">
-      <div class="line-he">
-        <p class="font-weight-bold m-0">Yashuo</p>
-        <small class="text-muted"><i class="fa fa-history"></i> 3 mi ago</small>
-      </div>
-      <div class="dropdown show ml-auto mr-2">
-        <a href="#" data-toggle="dropdown">
-          <span class="fa fa-ellipsis-v"></span>
-        </a>
+<% @posts.each do |p| %>
+  <div class="post-element bg-white py-3 px-4 mb-4">
+    <div class="user-info">
+      <div class="row">
+        <img src="https://znews-photo.zadn.vn/w660/Uploaded/cqdhmdxwp/2019_05_07/58950005_2293435560976842_1995073838693482496_o.jpg" class="rounded-circle mr-2">
+        <div class="line-he">
+          <p class="font-weight-bold m-0"><%= p.user.name %></p>
+          <small class="text-muted"><i class="fa fa-history"></i>
+            <%= time_ago_in_words(p.created_at) %>
+          </small>
+        </div>
+        <div class="dropdown show ml-auto mr-2">
+          <a href="#" data-toggle="dropdown">
+            <span class="fa fa-ellipsis-v"></span>
+          </a>
 
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
-          <a class="dropdown-item" href="#">Edit</a>
-          <a class="dropdown-item" href="#">Delete</a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
+            <% if current_user?(p.user) %>
+              <a class="dropdown-item" href="#"><%= t ".edit" %></a>
+              <%= link_to t(".delete"), p, method: :delete, class: "dropdown-item",
+                  data: { confirm: t(".you_sure") } %>
+            <% else %>
+              <a class="dropdown-item" href="#"><%= t ".report" %></a>
+            <% end %>
+
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="post-content py-2">
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit obcaecati ratione incidunt fugit architecto aperiam blanditiis quidem vel, cumque harum... <a href="">read more</a>
-    </p>
-    <img src="https://znews-photo.zadn.vn/w660/Uploaded/cqdhmdxwp/2019_05_07/58950005_2293435560976842_1995073838693482496_o.jpg" class="img-fluid">
-  </div>
-  <div class="reaction border-bottom py-2">
-    <div class="d-flex">
-      <div class="reaction-count mr-3">
-        <a href=""><i class="far fa-heart"></i></a>
-        <span>  50</span>
-      </div>
-      <div class="comment-count">
-        <a href=""><i class="far fa-comment"></i></a>
-        <span> 50</span>
-      </div>
+    <div class="post-content py-2">
+      <p>
+        <%= p.content %>
+      </p>
+      <%= image_tag p.image.url, class:"img-fluid" %>
     </div>
-  </div>
-  <div class="post-comment py-2">
-    <div class="comment-show">
-      <a href=""><i class="fa fa-history"></i> 50 people are commented...</a>
-    </div>
-    <div class="comment-element">
-      <a href="">Ronaldo</a> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, at.
-      <i class="far fa-heart float-right"></i>
-    </div>
-    <div class="comment-element">
-      <a href="">Ronaldo</a> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, at.
-      <i class="far fa-heart float-right"></i>
-    </div>
-    <div class="comment-element">
-      <a href="">Ronaldo</a> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, at.
-      <i class="far fa-heart float-right"></i>
-    </div>
-  </div>
-</div>
-<div class="post-element bg-white py-3 px-4 mb-4">
-  <div class="user-info">
-    <div class="row">
-      <img src="https://znews-photo.zadn.vn/w660/Uploaded/cqdhmdxwp/2019_05_07/58950005_2293435560976842_1995073838693482496_o.jpg" class="rounded-circle mr-2">
-      <div class="line-he">
-        <p class="font-weight-bold m-0">Yashuo</p>
-        <small class="text-muted"><i class="fa fa-history"></i> 3 mi ago</small>
-      </div>
-      <div class="dropdown show ml-auto mr-2">
-        <a href="#" data-toggle="dropdown">
-          <span class="fa fa-ellipsis-v"></span>
-        </a>
-
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
-          <a class="dropdown-item" href="#">Edit</a>
-          <a class="dropdown-item" href="#">Delete</a>
+    <div class="reaction border-bottom py-2">
+      <div class="d-flex">
+        <div class="reaction-count mr-3">
+          <a href=""><i class="far fa-heart"></i></a>
+          <span>  50</span>
+        </div>
+        <div class="comment-count">
+          <a href=""><i class="far fa-comment"></i></a>
+          <span> 50</span>
         </div>
       </div>
     </div>
-  </div>
-  <div class="post-content py-2">
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit obcaecati ratione incidunt fugit architecto aperiam blanditiis quidem vel, cumque harum... <a href="">read more</a>
-    </p>
-    <img src="https://znews-photo.zadn.vn/w660/Uploaded/cqdhmdxwp/2019_05_07/58950005_2293435560976842_1995073838693482496_o.jpg" class="img-fluid">
-  </div>
-  <div class="reaction border-bottom py-2">
-    <div class="d-flex">
-      <div class="reaction-count mr-3">
-        <a href=""><i class="far fa-heart"></i></a>
-        <span>  50</span>
+    <div class="post-comment py-2">
+      <div class="comment-show">
+        <a href=""><i class="fa fa-history"></i> 50 <%= t ".commented" %></a>
       </div>
-      <div class="comment-count">
-        <a href=""><i class="far fa-comment"></i></a>
-        <span> 50</span>
+      <div class="comment-element">
+        <a href="">Ronaldo</a> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, at.
+        <i class="far fa-heart float-right"></i>
       </div>
-    </div>
-  </div>
-  <div class="post-comment py-2">
-    <div class="comment-show">
-      <a href=""><i class="fa fa-history"></i> 50 people are commented...</a>
-    </div>
-    <div class="comment-element">
-      <a href="">Ronaldo</a> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, at.
-      <i class="far fa-heart float-right"></i>
-    </div>
-    <div class="comment-element">
-      <a href="">Ronaldo</a> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, at.
-      <i class="far fa-heart float-right"></i>
-    </div>
-    <div class="comment-element">
-      <a href="">Ronaldo</a> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, at.
-      <i class="far fa-heart float-right"></i>
-    </div>
-  </div>
-</div>
-<div class="post-element bg-white py-3 px-4 mb-4">
-  <div class="user-info">
-    <div class="row">
-      <img src="https://znews-photo.zadn.vn/w660/Uploaded/cqdhmdxwp/2019_05_07/58950005_2293435560976842_1995073838693482496_o.jpg" class="rounded-circle mr-2">
-      <div class="line-he">
-        <p class="font-weight-bold m-0">Yashuo</p>
-        <small class="text-muted"><i class="fa fa-history"></i> 3 mi ago</small>
+      <div class="comment-element">
+        <a href="">Ronaldo</a> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, at.
+        <i class="far fa-heart float-right"></i>
       </div>
-      <div class="dropdown show ml-auto mr-2">
-        <a href="#" data-toggle="dropdown">
-          <span class="fa fa-ellipsis-v"></span>
-        </a>
-
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
-          <a class="dropdown-item" href="#">Edit</a>
-          <a class="dropdown-item" href="#">Delete</a>
-        </div>
+      <div class="comment-element">
+        <a href="">Ronaldo</a> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, at.
+        <i class="far fa-heart float-right"></i>
       </div>
     </div>
   </div>
-  <div class="post-content py-2">
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit obcaecati ratione incidunt fugit architecto aperiam blanditiis quidem vel, cumque harum... <a href="">read more</a>
-    </p>
-    <img src="https://znews-photo.zadn.vn/w660/Uploaded/cqdhmdxwp/2019_05_07/58950005_2293435560976842_1995073838693482496_o.jpg" class="img-fluid">
-  </div>
-  <div class="reaction border-bottom py-2">
-    <div class="d-flex">
-      <div class="reaction-count mr-3">
-        <a href=""><i class="far fa-heart"></i></a>
-        <span>  50</span>
-      </div>
-      <div class="comment-count">
-        <a href=""><i class="far fa-comment"></i></a>
-        <span> 50</span>
-      </div>
-    </div>
-  </div>
-  <div class="post-comment py-2">
-    <div class="comment-show">
-      <a href=""><i class="fa fa-history"></i> 50 people are commented...</a>
-    </div>
-    <div class="comment-element">
-      <a href="">Ronaldo</a> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, at.
-      <i class="far fa-heart float-right"></i>
-    </div>
-    <div class="comment-element">
-      <a href="">Ronaldo</a> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, at.
-      <i class="far fa-heart float-right"></i>
-    </div>
-    <div class="comment-element">
-      <a href="">Ronaldo</a> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, at.
-      <i class="far fa-heart float-right"></i>
-    </div>
-  </div>
-</div>
+<% end %>
