--- a/app/views/shared/_post.html.erb
+++ b/app/views/shared/_post.html.erb
@@ -19,7 +19,9 @@
                       <%= f.file_field :image, class: "d-none",
                         id: "new_post_image",
                         accept: "image/x-png,image/gif,image/jpeg" %>
-                      <%= f.text_area :content, rows: "5", class: "form-control",
+                      <%= f.text_area :content,
+                        rows: Setting.front_end.text_area.rows_num,
+                        class: "form-control",
                         placeholder: t(".compose_new_post...") %>
                   </div>
                   <div id="preview_image" class="d-none">
@@ -30,8 +32,34 @@
                   </div>
               </div>
               <div class="modal-footer">
-                  <button type="button" id="new_post_add_image" class="btn btn-success btn-sm w-25">add image</button>
+                  <button type="button" id="new_post_add_image" class="btn btn-success btn-sm w-25"><%= t ".add_image" %></button>
                   <%= f.submit t(".submit"), class: "btn btn-primary btn-sm w-75" %>
+              </div>
+            <% end %>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="edit_post_modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title"><%= t ".update_post" %></h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <%= form_for @post, method: "patch" do |f|%>
+              <div class="modal-body">
+                  <div class="form-group">
+                      <%= f.text_area :content, rows: "5", class: "form-control"%>
+                  </div>
+                  <div id="preview_image">
+                      <img src="#" class="img-fluid">
+                  </div>
+              </div>
+              <div class="modal-footer">
+                  <%= f.submit t(".submit"), class: "btn btn-primary btn-sm w-100" %>
               </div>
             <% end %>
         </div>
