--- a/app/views/shared/_post.html.erb
+++ b/app/views/shared/_post.html.erb
@@ -20,7 +20,7 @@
                         id: "new_post_image",
                         accept: "image/x-png,image/gif,image/jpeg" %>
                       <%= f.text_area :content,
-                        rows: Setting.front_end.text_area.rows_num,
+                        rows: Settings.front_end.text_area.rows_num,
                         class: "form-control",
                         placeholder: t(".compose_new_post...") %>
                   </div>
@@ -60,6 +60,33 @@
               </div>
               <div class="modal-footer">
                   <%= f.submit t(".submit"), class: "btn btn-primary btn-sm w-100" %>
+              </div>
+            <% end %>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="edit_post_modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Update post</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <%= form_for @post, method: "patch" do |f|%>
+              <div class="modal-body">
+                  <div class="form-group">
+                      <%= f.text_area :content, rows: "5", class: "form-control",
+                        placeholder: "Compose new post..." %>
+                  </div>
+                  <div id="preview_image">
+                      <img src="#" class="img-fluid">
+                  </div>
+              </div>
+              <div class="modal-footer">
+                  <%= f.submit "Submit", class: "btn btn-primary btn-sm w-100" %>
               </div>
             <% end %>
         </div>
