--- a/app/views/shared/_post_element.html.erb
+++ b/app/views/shared/_post_element.html.erb
@@ -36,30 +36,69 @@
     <div class="reaction border-bottom py-2">
       <div class="d-flex">
         <div class="reaction-count mr-3">
-          <a href=""><i class="far fa-heart"></i></a>
-          <span>  50</span>
+          <div class="dropdown">
+            <% if p.reactions.where(user_id: @current_user.id).empty? %>
+              <%= link_to "#", data: {toggle: "dropdown"}, class: "show_reaction" do %>
+                <%= hidden_field_tag "",p.id, class: "post_id" %>
+                <%= hidden_field_tag "","", class: "reaction_id" %>
+                <%= content_tag :i, "", class: ["far", "fa-thumbs-up"] %>
+                <span class="count">  <%= p.reactions.count %></span>
+              <% end %>
+            <% else %>
+              <%= link_to "#", data: {toggle: "dropdown"}, class: "show_reaction active" do %>
+                <%= hidden_field_tag "",p.id, class: "post_id" %>
+                <% @reaction = p.reactions.where(user_id: @current_user.id)[0] %>
+                <%= hidden_field_tag "",@reaction.id, class: "reaction_id" %>
+                <% @type_class = Reaction.type_id_enums.key(@reaction.type_id).gsub(/_/, "-") %>
+                <%= content_tag :i, "", class: ["fas", @type_class] %>
+                <span class="count">  <%= p.reactions.count %></span>
+              <% end %>
+            <% end %>
+            <div class="dropdown-menu px-2" aria-labelledby="dropdownMenuLink">
+              <i class="far fa-thumbs-up mr-2"></i>
+              <i class="far fa-smile-beam mr-2"></i>
+              <i class="far fa-kiss-wink-heart mr-2"></i>
+              <i class="far fa-sad-tear mr-2"></i>
+              <i class="far fa-angry"></i>
+            </div>
+          </div>
         </div>
         <div class="comment-count">
-          <a href=""><i class="far fa-comment"></i></a>
-          <span> 50</span>
+          <%= link_to p do %>
+            <i class="far fa-comment"></i>
+            <span> <%= p.comments.count %></span>
+            <%= t ".commented" %>
+          <% end %>
         </div>
       </div>
     </div>
     <div class="post-comment py-2">
       <div class="comment-show">
-        <a href=""><i class="fa fa-history"></i> 50 <%= t ".commented" %></a>
-      </div>
-      <div class="comment-element">
-        <a href="">Ronaldo</a> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, at.
-        <i class="far fa-heart float-right"></i>
-      </div>
-      <div class="comment-element">
-        <a href="">Ronaldo</a> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, at.
-        <i class="far fa-heart float-right"></i>
-      </div>
-      <div class="comment-element">
-        <a href="">Ronaldo</a> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, at.
-        <i class="far fa-heart float-right"></i>
+        <div class="comment-list">
+          <% p.comments.limit(Settings.comment.limit_show).each do |cmt| %>
+            <div class="comment-element d-flex">
+              <div class="comment-content">
+                <%= link_to cmt.user.name, "#" %> <%= cmt.content %>
+              </div>
+              <div class="dropdown ml-auto">
+                <a href="#" data-toggle="dropdown">
+                  <span class="fa fa-ellipsis-v"></span>
+                </a>
+
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
+                  <% if current_user?(cmt.user) %>
+                    <button class="dropdown-item edit_cmt" value="<%= cmt.id %>"><%= t ".edit" %></button>
+                    <button class="dropdown-item del_cmt" value="<%= cmt.id %>"><%= t ".delete" %></button>
+                  <% end %>
+                </div>
+              </div>
+            </div>
+          <% end %>
+        </div>
+        <div class="input-group new_comment_box mt-2">
+          <%= hidden_field_tag "",p.id, class: "post_id" %>
+          <input type="text" class="form-control new_comment" placeholder="comment">
+        </div>
       </div>
     </div>
   </div>
